admin handler with login getting pending recordings list
