# cmd/server/main.go
@@ -2,6 +2,9 @@
 // @version         1.0
 // @host            localhost:8080
 // @BasePath        /v1
+// @securityDefinitions.apikey BearerAuth
+// @in header
+// @name Authorization
 
 package main
 
